--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -456,8 +456,10 @@ iframe{
     .form-box{
         width: 40%;
     }
-
-
+    
+    .ish-text, .footer-link, .icon-text, .buyurtma-text, .user-info-text, .xizmatlar-text,.ish-item-info-text, .copyright-text{
+        font-size: 14px;
+    }
 }
 
 @media (max-width: 820px){
@@ -552,7 +554,11 @@ iframe{
     }
 
     .xizmatlar-title, .user-info-title, .buyurtma-title, .nav-title, .ish-title{
-        font-size: 24px;
+        font-size: 22px;
+    }
+
+    .copyright, .footer-item-title{
+        font-size: 18px;
     }
 
     .xizmatlar-link{
@@ -569,6 +575,11 @@ iframe{
 
     .form-box{
         width: 55%;
+    }
+
+    .first, .second, .ish-buyurtma-link, .submit{
+        font-size: 16px;
+        font-weight: normal;
     }
 }
 
