--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -625,6 +625,10 @@ iframe{
         width: 70%;
     }
 
+    .submit{
+        width: 75%;
+    }
+
     .footer-list{
         padding-left: 0;
     }
